tests/snapshots/runtime_error_fixtures/base_flat_map_return_shape.snap
---
source: tests/runtime_error_fixtures_snapshots.rs
---
Fixture: examples/runtime_errors/base_flat_map_return_shape.flx
== vm ==
status: 1
stdout:
<empty>
stderr:
[1 of 7] Compiling  Assert
[2 of 7] Compiling  IO
[3 of 7] Compiling  List
[4 of 7] Compiling  Numeric
[5 of 7] Compiling  Option
[6 of 7] Compiling  String
[7 of 7] Compiling  base_flat_map_return_shape
[cfg→vm] Running via CFG → bytecode VM backend...
• 1 error • lib/Flow/List.flx
error[E1004]: primop concat expected Array, got Int

  lib/Flow/List.flx:90:36
   |
90 |                         Some(v) -> flat_map_arr(i + 1, concat(acc, f(v))),
   |                                    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

Stack trace:
  at flat_map_arr (lib/Flow/List.flx:90:36)
  at Flow.List.flat_map (lib/Flow/List.flx:85:9)
  at main (examples/runtime_errors/base_flat_map_return_shape.flx:2:5)
  at <main>
== jit ==
status: 1
stdout:
<empty>
stderr:
[1 of 7] Compiling  Assert
[2 of 7] Compiling  IO
[3 of 7] Compiling  List
[4 of 7] Compiling  Numeric
[5 of 7] Compiling  Option
[6 of 7] Compiling  String
[7 of 7] Compiling  base_flat_map_return_shape
[cfg→vm] Running via CFG → bytecode VM backend...
• 1 error • lib/Flow/List.flx
error[E1004]: primop concat expected Array, got Int

  lib/Flow/List.flx:90:36
   |
90 |                         Some(v) -> flat_map_arr(i + 1, concat(acc, f(v))),
   |                                    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

Stack trace:
  at flat_map_arr (lib/Flow/List.flx:90:36)
  at Flow.List.flat_map (lib/Flow/List.flx:85:9)
  at main (examples/runtime_errors/base_flat_map_return_shape.flx:2:5)
  at <main>
